[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Menu/Start Game Hover.png" type="Texture" id=2]
[ext_resource path="res://Assets/Menu/Start Game.png" type="Texture" id=3]
[ext_resource path="res://Assets/Menu/Options Hover.png" type="Texture" id=4]
[ext_resource path="res://Assets/Public/Click.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/Menu/Credits.png" type="Texture" id=6]
[ext_resource path="res://Assets/Menu/Options.png" type="Texture" id=7]
[ext_resource path="res://Assets/Menu/Credits Hover.png" type="Texture" id=8]
[ext_resource path="res://Assets/Menu/How To Play.png" type="Texture" id=9]
[ext_resource path="res://Assets/Public/Exit.png" type="Texture" id=10]
[ext_resource path="res://Assets/Public/Exit Hover.png" type="Texture" id=11]
[ext_resource path="res://Assets/Menu/How To Play Hover.png" type="Texture" id=12]
[ext_resource path="res://Assets/Public/Character.png" type="Texture" id=13]
[ext_resource path="res://Assets/Public/Background Section.png" type="Texture" id=14]
[ext_resource path="res://Assets/Public/Logo.png" type="Texture" id=15]

[node name="Menu" type="Control"]
anchor_left = 0.001
anchor_right = 0.001
margin_left = -0.28
margin_top = 112.0
margin_right = 96.72
margin_bottom = 182.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_left = -1.0
margin_top = -112.0
margin_right = 1439.0
margin_bottom = 914.0
texture = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="Characters" type="TextureRect" parent="."]
margin_left = -4.16
margin_top = -117.0
margin_right = 1435.84
margin_bottom = 907.0
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="."]
margin_left = 214.84
margin_top = -85.0
margin_right = 1214.84
margin_bottom = 215.0
texture = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = -1.616
anchor_bottom = 9.202
margin_left = 448.0
margin_top = 348.12
margin_right = 585.0
margin_bottom = -243.14
rect_scale = Vector2( 3.88059, 3.07833 )
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="TextureButton" parent="VBoxContainer"]
margin_right = 137.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HowToPlayButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 137.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="TextureButton" parent="VBoxContainer"]
visible = false
margin_top = 67.0
margin_right = 137.0
margin_bottom = 97.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 137.0
margin_bottom = 122.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 126.0
margin_right = 137.0
margin_bottom = 165.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="VBoxContainer/StartButton" to="." method="_on_StartButton_down"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HowToPlayButton" to="." method="_on_HowToPlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
